Genau/force-app/main/default/objects/Raw_Material__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HOT ROLLED</fullName>
            </value>
            <value>
                <fullName>ANNEALED BAR</fullName>
            </value>
            <value>
                <fullName>NORMALIZED</fullName>
            </value>
            <value>
                <fullName>P&amp;G BAR</fullName>
            </value>
            <value>
                <fullName>TUBE</fullName>
            </value>
            <value>
                <fullName>NORMALIZED TUBE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>