Genau/force-app/main/default/objects/Raw_Material__c/fields/Dia_of_the_RM_mm__c.field-meta.xml
<CustomField>
    <fullName>Dia_of_the_RM_mm__c</fullName>
    <label>Dia of the RM (mm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>