Genau/force-app/main/default/objects/Raw_Material__c/fields/RM_Description__c.field-meta.xml
<CustomField>
    <fullName>RM_Description__c</fullName>
    <label>RM Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>