Genau/force-app/main/default/objects/Raw_Material__c/fields/RM_Price_Kg__c.field-meta.xml
<CustomField>
    <fullName>RM_Price_Kg__c</fullName>
    <label>RM Price/Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>