Genau/force-app/main/default/objects/Raw_Material__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Condition__c</columns>
    <columns>Dia_of_the_RM_mm__c</columns>
    <columns>RM_Price_Kg__c</columns>
    <columns>RM_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>